--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <source 
             srcset="./src/images/pattern-divider-mobile.svg" media="max-width: 768px">
             <img
-            src="/src/images/pattern-divider-desktop.svg"
+            src="./src/images/pattern-divider-desktop.svg"
             alt="Divisor com uma marcação"/>
           </picture>
         <button class="botao">
-          <img src="/src/images/icon-dice.svg" alt="Botão com um dado" />
+          <img src="./src/images/icon-dice.svg" alt="Botão com um dado" />
         </button>
     </main>
     <script src="./src/js/index.js"></script>
