--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"/>
-    <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="./src/css/style.css" />
-    <link rel="stylesheet" href="./src/css/resposive.css">
+    <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/resposive.css">
     <title>Frontend Mentor | Advice generator app</title>
   </head>
 
@@ -25,15 +25,15 @@
           <p class="conselho">"Want some advice? Click the button below."</p>
           <picture>
             <source 
-            srcset="./src/images/pattern-divider-mobile.svg" media="max-width: 768px">
+            srcset="src/images/pattern-divider-mobile.svg" media="max-width: 768px">
             <img
-            src="./src/images/pattern-divider-desktop.svg"
+            src="src/images/pattern-divider-desktop.svg"
             alt="Divisor com uma marcação"/>
           </picture>
         <button class="botao">
-          <img src="./src/images/icon-dice.svg" alt="Botão com um dado" />
+          <img src="src/images/icon-dice.svg" alt="Botão com um dado" />
         </button>
     </main>
-    <script src="./src/js/index.js"></script>
+    <script src="src/js/index.js"></script>
   </body>
 </html>
